[tool.poetry]
name = "policy-pipeline"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{ include = "policy-pipeline" }]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.20"
langchain-community = "^0.3.19"
pydantic = "^2.10.6"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
