[tool.poetry]
name = "policy-pipeline"
version = "0.1.0"
description = ""
authors = ["Radhakrishna Sanka <rkrishnasanka@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{ include = "policy_pipeline" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain = "^0.3.20"
langchain-community = "^0.3.19"
pydantic = "^2.10.6"
pypdf2 = "^3.0.1"
spacy = "^3.8.4"
openai = "^1.72.0"
transformers = "^4.51.1"
torch = "^2.6.0"
tqdm = "^4.67.1"
pandas = "^2.2.3"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
pylint = "^3.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# generate-patch = "pipeline.cmdline:generate_patch_from_csv"
pipeline = "policy_pipeline.entrypoint:run_summarization_pipeline"
